--- a/src/lambda_config.json
+++ b/src/lambda_config.json
@@ -84,6 +84,16 @@
         "timeLimitInMilliSeconds": 6000,
         "memoryLimit": 128
     },
+    "getSlideShow": {
+        "handlerName": "generated/MovieController.getSlideShowList",
+        "timeLimitInMilliSeconds": 6000,
+        "memoryLimit": 128
+    },
+    "editSlideShow": {
+        "handlerName": "generated/MovieController.editSlideShow",
+        "timeLimitInMilliSeconds": 6000,
+        "memoryLimit": 128
+    },
     "getCategoryMoviesListByName": {
         "handlerName": "generated/MovieController.getCategoryMoviesListByName",
         "timeLimitInMilliSeconds": 6000,
