--- a/src/lambda_config.json
+++ b/src/lambda_config.json
@@ -84,6 +84,16 @@
         "timeLimitInMilliSeconds": 6000,
         "memoryLimit": 128
     },
+    "getMoviesListByImdb": {
+        "handlerName": "generated/MovieController.getMoviesListByImdb",
+        "timeLimitInMilliSeconds": 6000,
+        "memoryLimit": 128
+    },
+    "getMoviesListByVisit": {
+        "handlerName": "generated/MovieController.getMoviesListByVisit",
+        "timeLimitInMilliSeconds": 6000,
+        "memoryLimit": 128
+    },
     "getSlideShow": {
         "handlerName": "generated/MovieController.getSlideShowList",
         "timeLimitInMilliSeconds": 6000,
